--- a/carousel/index.html
+++ b/carousel/index.html
@@ -80,7 +80,7 @@
 
         <div class="container">
           <div class="carousel-caption text-left">
-            <h1>Example headline.</h1>
+            <h1>Example SAkdipsajios.</h1>
             <p>Some representative placeholder content for the first slide of the carousel.</p>
             <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
           </div>
